Update university to Baylor.

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 # Degree
-- uni: Springfield College
+- uni: <a href=http://www.baylor.edu>Baylor University</a>
   degree: M.Sc., <a href=http://www.ecs.baylor.edu/>Computer Science</a>
   year: 2009
   awards: >
