--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: 'Nikhil Peri | Resume'
 
 # Build settings
 markdown: kramdown
@@ -9,47 +8,45 @@ sass:
   style: compressed
 
 # Resume settings
-resume_avatar:                  "true"
-resume_name:                    "Homer J. Simpson"
-resume_title:                   "Nuclear Safety Inspector"
-resume_contact_email:           "homerjsimpson@youremailaddress.com"
-resume_contact_telephone:       "555-7334"
-resume_contact_address:         "742 Evergreen Terrace, Springfield"
-resume_header_contact_info: "742 Evergreen Terrace, Springfield | 555-7334 | homerjsimpson@youremailaddress.com"
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but K.I.S.S.</p>"
+resume_avatar:                  true
+resume_name:                    'Nikhil Peri'
+resume_title:                   'Electrical Engineer & Computer Scientist'
+resume_contact_email:           'nperi104@uottawa.ca'
+resume_contact_telephone:       '613-265-9279'
+resume_contact_address:         '48 Bridesburg Drive, Toronto Ontario'
+resume_header_intro: >
+  I am a passionate maker and aim to be a swiss army knife of skills.
+  I do not claim to know everything; but do claim to be able to learn anything.
+  I am a licensed pilot, founder of uOttawa Rocketry and have been a garage tinker'er my entire life.
+  I live with the philosophy <i>--Do what you can't</i>, and wish to work in an environment where
+  people get the license to step out of their comfort zone.
 
-# use "yes" to display the email contact button,
-# "no" to display an "I'm not looking for work" message,
+# use 'yes' to display the email contact button,
+# 'no' to display an 'I'm not looking for work' message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
-resume_looking_for_work:        "yes"
+# resume_looking_for_work:        'yes'
 
 # Decide which sections to use
 # comment out to hide
 resume_section_experience:      true
 resume_section_education:       true
-resume_section_projects:        true
 resume_section_skills:          true
-resume_section_recognition:     true
-resume_section_links:           true
-resume_section_associations:    true
+resume_section_projects:        true
+resume_section_recognition:     false
+resume_section_links:           false
+resume_section_associations:    false
 # resume_section_interests:       true
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/jglovier/resume-template"
-  resume_twitter_url:           "http://twitter.com/jglovier"
-  resume_dribbble_url:          "https://dribbble.com/jag"
-  # resume_facebook_url:          "insert Facebook URL here"
-  resume_linkedin_url:          "https://www.linkedin.com/in/joelglovier"
-  # resume_instagram_url:         "insert your Instagram URL here"
-  resume_website_url:           "http://joelglovier.com"
+  resume_github_url:            'https://github.com/nikhilperi'
+  # resume_facebook_url:          'insert Facebook URL here'
+  resume_linkedin_url:          'https://www.linkedin.com/in/nikhil-peri-511639109'
+  # resume_instagram_url:         'insert your Instagram URL here'
+  resume_website_url:           'http://nikhilperi.github.io'
 resume_print_social_links:      true
 
 # Design settings
 resume_theme:                   default
-
-# Note: when editing locally, remember to restart
-# your Jekyll server when you edit this file. Changes
-# to _config.yml are only recognized when the server starts
