--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -25,7 +25,7 @@
   summary:  >
     <ul class="resume-item-list"><li>Led strategic direction for threat intelligence and analytics</li>
     <li> Designed and led implementation of security analytics capability leveraging <a href=http://www.splunk.com>Splunk</a></li>
-    <li>Led computer forensics capability, in coordination with Legal</li>
+    <li>Led computer forensics capability in coordination with Legal</li>
     <li>Provided Tier 3 incident response, including mentoring Tier 1 and 2 analysts</li>
     <li>Designed and implemented automation across security function, reducing mean time to resolution by 92%</li></ul>
 
