Add iteration through multiple awards for education.

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,9 +2,9 @@
 - uni: <a href=http://www.baylor.edu>Baylor University</a>
   degree: M.Sc., <a href=http://www.ecs.baylor.edu/>Computer Science</a>
   year: 2009
-  awards: >
-    <ul class=resume-item-list"><li>Graduate GPA: 4.0</li>
-    <li>Thesis: <a href=http://adamsealey.com/papers/adam_sealey_masters.pdf>Solving the F/A-18 Mission Computer Virtual Memory Problem</a></li></ul>
+  awards:
+    - award: Graduate GPA 4.0
+    - award: Thesis <a href=http://hdl.handle.net/2104/5393>Solving the F/A-18 Mission Computer Virtual Memory Problem</a>
 
 - degree: B.Sc., <a href=http://www.ecs.baylor.edu/>Computer Science</a> (with Honors)
   year: 2004
