--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,62 +3,67 @@
 - company: <a href=http://www.nike.com>NIKE Inc.</a>
   position: Director, Information Security Governance and Metrics
   duration: June, 2016 &mdash; Present
-  summary: >
-    <ul class="resume-item-list"><li>Accountable for Enterprise-wide information security program aligned with ISO</li>
-    <li>Lead delivery of portfolio-wide metrics, utilized at Board & senior leadership levels</li>
-    <li>Accountable for ensuring all security programs operate in accordance with Enterprise security policies</li>
-    <li>Oversee security exception and risk register processes, providing foundation for risk-driven strategic alignment for the security program</li>
-    <li>Serve as a primary GRC liaison to Internal Audit, Legal, and Privacy Counsel</li></ul>
-
+  summary: Summary of the job
+  accomplishments:
+    - item: Accountable for Enterprise-wide information security program aligned with ISO
+    - item: Lead delivery of portfolio-wide metrics, utilized at Board & senior leadership levels
+    - item: Accountable for ensuring all security programs operate in accordance with Enterprise security policies
+    - item: Oversee security exception and risk register processes, providing foundation for risk-driven strategic alignment for the security program
+    - item: Serve as a primary GRC liaison to Internal Audit, Legal, and Privacy Counsel
 
 - position: Director, Cyber Threat Analytics
   duration: April 2014 &mdash; May 2016
-  summary:  >
-    <ul class="resume-item-list"><li>Established new analytic team and capability focused on collecting large amounts (> 10TB/day) of security logs and identifying malicious behavior</li>
-    <li>Leveraged new capability to divest outsourced MSSP, saving over \$500K annually</li>
-    <li>Led combination of <a href=http://www.splunk.com>Splunk</a> capability across five Nike groups under one instance, saving over $75M in 3 years</li>
-    <li>Defined strategic vision and road-map for advanced security analytic capabilities leveraging machine learning</li>
-    <li>Responsible for management of entire security portfolio finances, totaling over $50M</li></ul>
+  summary:  Summary
+  accomplishments:
+    - item: Established new analytic team and capability focused on collecting large amounts (> 10TB/day) of security logs and identifying malicious behavior
+    - item: Leveraged new capability to divest outsourced MSSP, saving over \$500K annually
+    - item: Led combination of <a href=http://www.splunk.com>Splunk</a> capability across five Nike groups under one instance, saving over $75M in 3 years
+    - item: Defined strategic vision and road-map for advanced security analytic capabilities leveraging machine learning
+    - item: Responsible for management of entire security portfolio finances, totaling over $50M
 
 - position: Senior Information Security Engineer
   duration: April 2013 &mdash; April 2014
-  summary:  >
-    <ul class="resume-item-list"><li>Led strategic direction for threat intelligence and analytics</li>
-    <li> Designed and led implementation of security analytics capability leveraging <a href=http://www.splunk.com>Splunk</a></li>
-    <li>Led computer forensics capability in coordination with Legal</li>
-    <li>Provided Tier 3 incident response, including mentoring Tier 1 and 2 analysts</li>
-    <li>Designed and implemented automation across security function, reducing mean time to resolution by 92%</li></ul>
+  summary:  Summary
+  accomplishments:
+    - item: Led strategic direction for threat intelligence and analytics
+    - item: Designed and led implementation of security analytics capability leveraging <a href=http://www.splunk.com>Splunk</a>
+    - item: Led computer forensics capability in coordination with Legal
+    - item: Provided Tier 3 incident response, including mentoring Tier 1 and 2 analysts
+    - item: Designed and implemented automation across security function, reducing mean time to resolution by 92%
 
 # Baylor
 - company: <a href=http://www.baylor.edu>Baylor University</a>
   position: Senior Information Security Analyst
   duration: September 2010 &mdash; April 2013
-  summary: >
-    <ul class="resume-item-list"><li>Principal technical analyst reporting to university ISO</li>
-    <li>Technical lead for PCI compliance effort including project management of technical implementations.  Member of the Payment Card Oversight committee responsible for payment card usage university wide</li>
-    <li>Lead development and operation of technical detection mechanisms for security incidents</li>
-    <li>Develop incident response process and lead incident response team</li>
-    <li>Provide computer forensic support for internal and criminal investigations in coordination with Baylor Police and Office of General Counsel</li>
-    <li>Assist in development of campus-wide security policies and roadmaps, in addition to standard vendor contract reviews and negotiations</li>
-    <li>Conduct exploratory research into emerging security technologies</li></ul>
+  summary: Summary
+  accomplishments:
+    - item: Principal technical analyst reporting to university ISO
+    - item: Technical lead for PCI compliance effort including project management of technical implementations.  Member of the Payment Card Oversight committee responsible for payment card usage university wide
+    - item: Lead development and operation of technical detection mechanisms for security incidents
+    - item: Develop incident response process and lead incident response team
+    - item: Provide computer forensic support for internal and criminal investigations in coordination with Baylor Police and Office of General Counsel
+    - item: Assist in development of campus-wide security policies and roadmaps, in addition to standard vendor contract reviews and negotiations
+    - item: Conduct exploratory research into emerging security technologies
 
 - position: Information Security Analyst
   duration: January 2008 &mdash; August 2009
-  summary:  >
-    <ul class="resume-item-list"><li>Principal technical analyst reporting to the university ISO</li>
-    <li>Provide computer forensic support for internal and criminal investigations in coordination with Baylor Police and Office of General Counsel</li>
-    <li>Review and approve network firewall policy requests and implementations</li>
-    <li>Administer Intrusion Prevention (IPS) hardware and software, along with Network Anomaly Detection system (ADS)</li>
-    <li>Conduct exploratory research into emerging security technologies</li></ul>
+  summary: Summary
+  accomplishments:
+    - item: Principal technical analyst reporting to the university ISO
+    - item: Provide computer forensic support for internal and criminal investigations in coordination with Baylor Police and Office of General Counsel
+    - item: Review and approve network firewall policy requests and implementations
+    - item: Administer Intrusion Prevention (IPS) hardware and software, along with Network Anomaly Detection system (ADS)
+    - item: Conduct exploratory research into emerging security technologies
 
 - position: Network Security Analyst / Programmer
   duration: August 2004 &mdash; January 2008
-  summary: >
-    <ul class="resume-item-list"><li>Define and implement procedures to identify and remediate cyber-security threats utilizing firewalls, IPS, and ADS</li>
-    <li>Develop customized software packages to facilitate monitoring, securing, and troubleshooting the network</li>
-    <li>Provide technical insight for hardware and policy decisions, including business impact of technology acquisitions, affecting more than 8,000 networked devices</li>
-    <li>Coordinate with other groups within the university to identify and resolve IT issues quickly</li>
-    <li>Administer departmental Linux servers of a variety of flavors, including Redhat, Gentoo, and Ubuntu, as well as MySQL</li></ul>
+  summary: Summary
+  accomplishments:
+    - item: Define and implement procedures to identify and remediate cyber-security threats utilizing firewalls, IPS, and ADS
+    - item: Develop customized software packages to facilitate monitoring, securing, and troubleshooting the network
+    - item: Provide technical insight for hardware and policy decisions, including business impact of technology acquisitions, affecting more than 8,000 networked devices
+    - item: Coordinate with other groups within the university to identify and resolve IT issues quickly
+    - item: Administer departmental Linux servers of a variety of flavors, including Redhat, Gentoo, and Ubuntu, as well as MySQL
 
 # Baylor Adjunct
 - company: <a href=http://www.ecs.baylor.edu>Baylor University - School of Computer Science</a>
@@ -70,18 +75,19 @@
 - company: <a href=http://www.llnl.gov>Lawrence Livermore National Laboratory</a>
   position: Senior Cyber Security Specialist
   duration: August 2009 &mdash; September 2010
-  summary: >
-    <ul class="resume-item-list"><li>Liaison between security research groups and security operations teams</li>
-    <li>Implement and automate CWSandbox to enhance rapid-response forensic capability of Incident Management Team (IMT)</li>
-    <li>Redesign web log analysis capability, including correlation with full-packet capture</li>
-    <li>Mentor 6 summer interns working in varying security related fields as part of 2010 CyberDefenders intern program</li>
-    <li>Provide in-depth network forensics and cyber security incident response to entire DOE (Work required DOE Q/SCI security clearance with SSBI)</li></ul>
+  summary: Summary
+  accomplishments:
+    - item: Liaison between security research groups and security operations teams
+    - item: Implement and automate CWSandbox to enhance rapid-response forensic capability of Incident Management Team (IMT)
+    - item: Redesign web log analysis capability, including correlation with full-packet capture
+    - item: Mentor 6 summer interns working in varying security related fields as part of 2010 CyberDefenders intern program
+    - item: Provide in-depth network forensics and cyber security incident response to entire DOE (Work required DOE Q/SCI security clearance with SSBI)
 
 # Springfield Nuclear Power Plant
 # - company: Springfield Nuclear Power Plant
 #   position: Safety Inspector
 #   duration: Nov, 1980 &mdash; Present
-#   summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>Ate lots of donuts</li><li>Fell asleep rarely</li><li>Left promptly at end of day (sometimes earlier)</li></ul>
+#   summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list">-item: Ate lots of donuts-item: Fell asleep rarely-item: Left promptly at end of day (sometimes earlier)
 #
 # # Windmill Crank Operator
 # - company: Sir Putt-A-Lot's Merrie Olde Fun Centre
