--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ resume_section_experience:      true
 resume_section_education:       true
 resume_section_projects:        false
 resume_section_skills:          false
-resume_section_recognition:     true
+resume_section_recognition:     false
 resume_section_links:           false
 resume_section_associations:    true
 resume_section_interests:       false
