--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ Moving across servers, code, and deployments, I started working as a professiona
 day-by-day, always looking for new technologies and methods.<br>
 Experienced and certified by VMware on virtualization
 technologies and skilled in Microsoft/Linux environments. <br>
-Looking for a remote DevOps position.</p>"
+Looking for a DevOps position.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
