--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ resume_looking_for_work:        'yes'
 resume_section_experience:      true
 resume_section_education:       true
 resume_section_skills:          true
-resume_section_projects:        true
+resume_section_projects:        false
 resume_section_recognition:     false
 resume_section_links:           false
 resume_section_associations:    false
